--- a/sub_window/index.html
+++ b/sub_window/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Hello World! (sub_window)</title>
 
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
+    <h1>🩷 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
     <script type="module" src="/renderer.js"></script>
   </body>
